<resources>
    <string name="app_name">Cat Catcher</string>
    <string name="game_over">Game Over</string>
    <string name="score">Score: 0</string>
    <string name="menu">Menu</string>
    <string name="restart">Restart</string>
    <string name="play">Play</string>
    <string name="scores">Scores</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="quit">Quit</string>
    <string name="pause">Pause</string>
    <string name="continue_string">Continue</string>
    <string name="last5scores">Last 5 scores:</string>
    <string name="first">1. 0</string>
    <string name="second">2. 0</string>
    <string name="third">3. 0</string>
    <string name="fourth">4. 0</string>
    <string name="fifth">5. 0</string>
</resources>