<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".screens.ScoresFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_gravity="center|top"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/last5scores"
            android:fontFamily="@font/archivo_black"
            android:layout_margin="5dp"
            android:textSize="28sp"
            android:paddingBottom="30dp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/first"
            android:text="@string/first"
            android:fontFamily="@font/archivo_black"
            android:layout_margin="5dp"
            android:textSize="28sp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/second"
            android:text="@string/second"
            android:fontFamily="@font/archivo_black"
            android:layout_margin="5dp"
            android:textSize="28sp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/third"
            android:text="@string/third"
            android:fontFamily="@font/archivo_black"
            android:layout_margin="5dp"
            android:textSize="28sp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/fourth"
            android:text="@string/fourth"
            android:fontFamily="@font/archivo_black"
            android:layout_margin="5dp"
            android:textSize="28sp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/fifth"
            android:text="@string/fifth"
            android:fontFamily="@font/archivo_black"
            android:layout_margin="5dp"
            android:textSize="28sp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</FrameLayout>