<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".screens.MenuFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play_button"
            android:layout_width="250dp"
            android:backgroundTint="@color/grey_back"
            android:layout_margin="5dp"
            android:fontFamily="@font/archivo_black"
            android:text="@string/play"
            android:textSize="28sp"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/scores_button"
            android:layout_width="250dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/grey_back"
            android:fontFamily="@font/archivo_black"
            android:text="@string/scores"
            android:textSize="28sp"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rate_button"
            android:layout_width="250dp"
            android:backgroundTint="@color/grey_back"
            android:text="@string/rate"
            android:fontFamily="@font/archivo_black"
            android:layout_margin="5dp"
            android:textSize="28sp"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share_button"
            android:layout_width="250dp"
            android:backgroundTint="@color/grey_back"
            android:text="@string/share"
            android:layout_margin="5dp"
            android:fontFamily="@font/archivo_black"
            android:textSize="28sp"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/quit_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/grey_back"
            android:fontFamily="@font/archivo_black"
            android:text="@string/quit"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="28sp" />

    </LinearLayout>
</FrameLayout>