<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".screens.FinishFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#7E000000"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/game_over"
            android:textAllCaps="true"
            android:textSize="36sp"
            android:textColor="@color/white"
            android:fontFamily="@font/archivo_black"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/score_text"
            android:layout_width="wrap_content"
            android:text="@string/score"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:layout_marginBottom="35dp"
            android:textColor="@color/white"
            android:fontFamily="@font/archivo_black"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/grey_back"
            android:fontFamily="@font/archivo_black"
            android:text="@string/menu"
            android:textAllCaps="true"

            android:textColor="@color/black"
            android:textSize="28sp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/restart_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/grey_back"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/archivo_black"
            android:text="@string/restart"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="28sp" />

    </LinearLayout>

</FrameLayout>